--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Project Name",
+  "name": "mhi-control-center",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "index.js",
   "scripts": {
     "start:dev": "webpack -w & nodemon main",
-    "start": "node main"
+    "start": "nodemon main"
   },
   "keywords": [
     "react",
@@ -23,12 +23,16 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.4.0",
+    "redux-persist-migrate": "^5.0.0",
     "redux-thunk": "^2.1.0",
     "sequelize": "^4.7.4"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
